@@ -1,3 +1,11 @@
+2006-08-01 PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>
+
+	* src/mainframe.cpp: Always hide the text on toolbar buttons.
+	
+	* src/dialog.cpp: Swap OK and Cancel button to be compatible with GNOME.
+	
+	* src/view/telnetview.cpp: Display hand cursor on hyperlinks when no mouse support.
+
 2006-08-01  Kanru Chen  <koster@debian.org.tw>
 
 	* ChangeLog: Correct timestamps.
